--- a/morecookies.html
+++ b/morecookies.html
@@ -37,7 +37,7 @@
     </div>
 </div>
 <h2>Tap the sugar cookies to learn how to make sugar cookies the right way!</h2>
-<a href= "file:///Users/annacleary/Desktop/Web%20Page%20design/My%20first%20Website/sugar.html"><img class="sugar" src= "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT1-SdeVzVAXhAYXlGrnPzO9vWvy7wO_fBy9QuX9aodJZ9QjVE5eU7Br3Pe"></a>
+<a href= "https://cdn.rawgit.com/acleary19/Bake-Cookies/0bd09a73/sugar.html"><img class="sugar" src= "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT1-SdeVzVAXhAYXlGrnPzO9vWvy7wO_fBy9QuX9aodJZ9QjVE5eU7Br3Pe"></a>
 <br>
 <script type="text/javascript">
 function annoyingPopup() {alert('because he lost his filling');}
@@ -50,7 +50,7 @@ function annoyingPopup() {alert('because he lost his filling');}
 </body>
 </html>
 <footer>
-&copy; 2017<script>new
+&copy; 2 0 1 6<script>new
 Date().getFullYear()>2 0 1 6&&document.write("-"+new
 Date()getFullYear());</script>, CookieBakers.
 </footer>
