--- a/morecookies.html
+++ b/morecookies.html
@@ -22,35 +22,29 @@
             </li>
             <li>
                 <a href="about.html">About </a>
-                <ul class="hidden">
-                    </li>
-                </ul>
-            </li>
+          </li>
             <li>
                 <a href="ingredientsandsteps.html">Ingredients and Steps </a>
-                <ul class="hidden">
-                </ul>
             </li>
             <li><a href="morecookies.html">More Cookies!</a>
             </li>
-        </ul>
+      </ul>
+        
     </div>
-</div>
 <h2>Tap the sugar cookies to learn how to make sugar cookies the right way!</h2>
-<a href= "https://cdn.rawgit.com/acleary19/Bake-Cookies/0bd09a73/sugar.html"><img class="sugar" src= "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT1-SdeVzVAXhAYXlGrnPzO9vWvy7wO_fBy9QuX9aodJZ9QjVE5eU7Br3Pe"></a>
+<a href= "https://cdn.rawgit.com/acleary19/Bake-Cookies/fed9d37c/sugar.html"><img class="sugar" src= "https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcT1-SdeVzVAXhAYXlGrnPzO9vWvy7wO_fBy9QuX9aodJZ9QjVE5eU7Br3Pe"></a>
 <br>
 <script type="text/javascript">
 function annoyingPopup() {alert('because he lost his filling');}
   function jokePopup() {alert('because he was feeling crummy');}
 </script>
-</head>
-<body>
+
 <p><a href="#" onClick="annoyingPopup();">Click here to find out why the Oreo went to the dentist.</a></p>
 <p><a href="#" onClick="jokePopup();">Why did the cookie go to the doctor?</a></p>
+
+<footer>
+&copy; 2 0 1 6
+<script>new Date().getFullYear()>2 0 1 6&&document.write("-"+new Date().getFullYear());</script>, CookieBakers.
+</footer>
 </body>
 </html>
-<footer>
-&copy; 2 0 1 6<script>new
-Date().getFullYear()>2 0 1 6&&document.write("-"+new
-Date()getFullYear());</script>, CookieBakers.
-</footer>
