--- a/cookieproject.html
+++ b/cookieproject.html
@@ -41,8 +41,8 @@
         By using this guide, your cookies will not have melted chocolate chips or stick together in the oven.</h3>
         <img class="cookies" src="https://images-gmi-pmc.edge-generalmills.com/cd81c853-faf5-4ab5-9a2c-08ff78254007.jpg" style="width: 30%">
         <br>
-<footer>
-&copy; 2 0 1 6<script>new
-Date().getFullYear()>2 0 1 6&&document.write("-"+new
-Date()getFullYear());</script>, CookieBakers.
-</footer>
+  <footer>
+    &copy; 2017<script>new
+    Date().getFullYear()>2 0 1 6&&document.write("-"+new
+    Date()getFullYear());</script>, CookieBakers.
+    </footer>
