--- a/morecookies.html
+++ b/morecookies.html
@@ -42,9 +42,10 @@ function annoyingPopup() {alert('because he lost his filling');}
 <p><a href="#" onClick="annoyingPopup();">Click here to find out why the Oreo went to the dentist.</a></p>
 <p><a href="#" onClick="jokePopup();">Why did the cookie go to the doctor?</a></p>
 
-<footer>
-&copy; 2 0 1 6
-<script>new Date().getFullYear()>2 0 1 6&&document.write("-"+new Date().getFullYear());</script>, CookieBakers.
-</footer>
+  <footer>
+    &copy; 2017<script>new
+    Date().getFullYear()>2 0 1 6&&document.write("-"+new
+    Date()getFullYear());</script>, CookieBakers.
+    </footer>
 </body>
 </html>
