--- a/cookieproject.html
+++ b/cookieproject.html
@@ -42,6 +42,6 @@
         <br>
   <footer>
     &copy; 2017<script>new
-    Date().getFullYear()>2 0 1 6&&document.write("-"+new
+    Date().getFullYear()>2017&&document.write("-"+new
     Date()getFullYear());</script>, CookieBakers.
     </footer>
