--- a/ingredientsandsteps.html
+++ b/ingredientsandsteps.html
@@ -61,7 +61,7 @@
           <br>
       <img class="oven" src="http://www.hellawella.com/sites/hellawella.com/files/styles/default/public/images/eats_cookie_featured.jpg?itok=tAgnPiFI">
       <footer>
-      &copy; 2 0 1 6<script>new
+      &copy; 2017<script>new
       Date().getFullYear()>2017&&document.write("-"+new
       Date()getFullYear());</script>, CookieBakers.
       </footer>
