--- a/ingredientsandsteps.html
+++ b/ingredientsandsteps.html
@@ -60,8 +60,8 @@
           </ol>
           <br>
       <img class="oven" src="http://www.hellawella.com/sites/hellawella.com/files/styles/default/public/images/eats_cookie_featured.jpg?itok=tAgnPiFI">
-      <footer>
-      &copy; 2017<script>new
-      Date().getFullYear()>2017&&document.write("-"+new
-      Date()getFullYear());</script>, CookieBakers.
-      </footer>
+    <footer>
+&copy; 2017<script>new
+Date().getFullYear()>2 0 1 6&&document.write("-"+new
+Date()getFullYear());</script>, CookieBakers.
+</footer>
